<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".espresso.activities.ActionBar">

    <Button
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/open_date_picker_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/open_date_picker_dialog" />

    <Button
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/open_time_picker_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/open_date_picker_dialog"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/open_time_picker_dialog" />

    <TextView
        android:id="@+id/date_time_picker_update_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/header_margin"
        android:layout_marginTop="@dimen/header_margin"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>