<resources>
    <string name="app_name">InstrumentationTesting</string>
    <string name="action_settings">Settings</string>
    <string name="type_operand_one_hint">Enter first operand</string>
    <string name="type_operant_two_hint">Enter second operand</string>
    <string name="add_operation_text">Addition</string>
    <string name="sub_operation_text">Subtraction</string>
    <string name="div_operation_text">Division</string>
    <string name="mul_operation_text">Multiply</string>
    <string name="hello_world">Espresso</string>
    <string name="type_something">type something..</string>
    <string name="change_text">Change Text</string>
    <string name="text_change_new_activity">Open activity and change text</string>
    <string name="type_text">Type Text</string>
    <string name="spinner_selection">Spinner</string>
    <string name="custom_list_adapter">Custom List Adapter</string>
    <string name="search_view">SearchView</string>
    <string name="actionbar">Action Bar</string>
    <string name="view_pager">View Pager</string>
    <string name="dialogs">Dialogs</string>
    <string name="recycler_view">RecyclerView</string>
    <string name="date_time_pickers">Date and time picker dialog</string>
    <string name="action_search">Search Countries</string>
    <string name="search_suggestions">Search countries e.g. India, Mexico etc</string>
    <string name="search_no_items_found">No items Found !!!</string>
    <string name="search_hint">Search countries</string>
    <string name="toggle_action_mode">Toggle Action mode</string>
    <string name="action_bar_item_notification">Notifications</string>
    <string name="action_mode_search">Search here</string>
    <string name="action_bar_item_share">Share</string>
    <string name="open_dialog">Open Dialog</string>
    <string name="dialog_title">Altert dialog</string>
    <string name="dialog_message">This is the confirmation dialog to update TextView below.</string>
    <string name="dialog_negative_button_title">Cancel</string>
    <string name="dialog_positive_button_title">OK</string>
    <string name="open_date_picker_dialog">Open Date Picker</string>
    <string name="open_time_picker_dialog">Open time Picker</string>
    <string name="repeat_service">Repeat Service</string>
    <string name="espresso_home_idling_resources_service">Idling Resources-Service</string>
    <string name="espresso_home_idling_resources_elapsed_time">Idling Resources-Elapsed time</string>
    <string name="instructions">Press start, wait for a Minute ,press Stop</string>
    <string name="toggle_button_start">Start</string>
    <string name="success">Yes you waited for a minute</string>
    <string name="toggle_button_stop">Stop</string>
    <string name="elapsed_time">%1$.2f s</string>
    <string name="failure">1 Minute is not yet over !! </string>
    <string name="loading_dialog_text">Done</string>
    <string name="loading_dialog_title">Loading</string>
    <string name="loading_dialog_message">Please wait !!!</string>
    <string name="espresso_home_idling_resources_loading_dialog">Idling Resource- Loading dialog</string>
    <string name="custom_failure_handler_status">Custom failure handler</string>
    <string name="espresso_home_custom_failure">Custom Failure handler</string>
    <string name="espresso_home_web_view">WebView</string>
    <string name="action_started_service_update_list">Update List </string>
    <string name="espresso_home_junit4_rules_started_service">JUnit4 ServiceRule: Started Service</string>
    <string name="espresso_home_junit4_rules_bound_service">JUnit4 ServiceRule: Bound Service</string>
    <string name="pick_number_hint">Type 10 digit number ..</string>
    <string name="pick_number">Pick number</string>
    <string name="call_number">Make a call to number</string>
    <string name="espresso_home_intent">Intent stubbing and matching</string>
    <string name="call_number_dialog_title">Confirmation Dialog</string>
    <string name="call_number_dialog__message">This app requires permission to call number</string>
    <string name="call_number_dialog_positive_button_text">OK</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="espresso_home_intent_more">Intent Stubbing with Gallery</string>
</resources>
